Improvements to display and handling of potential duplicates
